syntax = "proto3";
//option optimize_for = LITE_RUNTIME;


message Information {
	message UserInformation {
		uint32 owerIdentifier = 1;
		uint32 staffIdentifier = 2;
		string owerName = 3;
		string owerCertificateNum = 4;
		uint32 owerCertificateType = 5;
	}
	UserInformation userInfo = 1;

	message CardInformation {
		string cardIssuerIdentifier = 1;
		uint32 cardType = 2;
		uint32 cardVersion = 3;
		uint32 cardNetworkNum = 4;
		uint32 cardUserInternalNum = 5;
		string enabledTime = 6;
		string expireTime = 7;
		string carPlateNumber = 8;
		uint32 userType = 9;
		uint32 carPlateColor = 10;
		uint32 carModel = 11;
	}
	CardInformation cardInfo = 2;
}

message RepeatedInformation {
	repeated Information infos = 1;
}
